<resources>
    <string name="app_name">GeeBeeView</string>
    <string name="username">Username</string>
    <string name="username_hint">username</string>
    <string name="password">Password</string>
    <string name="password_hint">password</string>

    <string name="geebee_title">GeeBee View</string>
    <string name="dataset_list_header">Dataset List</string>
    <string name="title_home">Home</string>

    <string name="dataset_title">Dataset List</string>
    <string name="patient_list_title">Patient List</string>
    <string name="school">School</string>
    <string name="dateCreated">Date</string>


    <string name="loading">Loading. Please wait...</string>

    <string name="filter_template">Data is filtered by </string>
    <string name="click_to_remove">Tap to remove</string>
    <string name="overview_title">School Health Statistics</string>
    <string name="national_title">School to National Health Comparison</string>
    <string name="highlight_highest">Showing highest values per category. Tap to change</string>
    <string name="highlight_target">Showing target values per category. Tap to change</string>

    <string name="sidebar_no_options">No options available</string>

    <string name="data_visualization">Data Visualization</string>
    <string name="patient_record">Patient Record</string>
    <string name="dataset">Dataset/s:</string>
    <string name="filter">Filter/s:</string>
    <string name="chart">Chart: </string>
    <string name="displayed_data">Health Test: </string>
    <string name="right_chart_content">Right Chart: </string>

    <!-- BUTTONS -->
    <string name="login">LOGIN</string>
    <string name="signup">SIGN UP</string>

    <string name="download">DOWNLOAD</string>
    <string name="visualize">VISUALIZE</string>

    <string name="add_dataset">Add Data</string>
    <string name="add_filter">Add Filter</string>
    <string name="view_patient_list">View Patient List</string>

    <!-- DATALIST SIDEBAR EXTEND -->
    <string name="datalist_sidebar_refresh">Refresh List</string>
    <string name="datalist_sidebar_download_all">Download All</string>
    <string name="datalist_sidebar_sort">Sort</string>


    <!-- PATIENT RECORD SIDEBAR -->
    <string name="patient_about">ABOUT</string>
    <string name="patient_consultation">View HPI List</string>
    <string name="patient_immunization">IMMUNIZATION</string>

    <!-- PATIENT CIRCLE ITEMS -->
    <string name="patient_circle_age">AGE</string>
    <string name="patient_circle_yrs">AGE</string>
    <string name="patient_circle_sex">SEX</string>

    <!-- PATIENT SIDEBAR EXTEND -->
    <string name="patient_sidebar_extend_about">Personal Information</string>
    <string name="patient_sidebar_extend_hpi">View HPI</string>
    <string name="patient_sidebar_extend_immnuization">Immunization</string>


    <!-- PATIENT RECORD STRINGS -->
    <string name="patient_medical_record">Medical Record</string>
    <string name="patient_personal_info">Personal Information</string>


    <string name="cd_blank">content</string>

    <string name="cd_geebeeview">GeeBee View</string>

    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="view_record">VIEW RECORD</string>

    <string name="birthday">Birthday</string>
    <string name="gender_r">Gender: </string>
    <string name="dominant_hand">Dominant Hand</string>
    <string name="last_record">Last Check Up: </string>
    <string name="bmi">BMI</string>
    <string name="remarks">Remarks</string>


    <string name="overview">Overview</string>
    <string name="num_50">50%</string>


    <string name="patient_remarks">Patient</string>
    <string name="record_remarks">Record</string>

    <string name="record_date">Record Date:</string>
    <string name="record_as_of">as of </string>

    <string name="grade_level">Grade Level</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="visual_acuity">Visual Acuity</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="color_vision">Color Vision</string>
    <string name="hearing">Hearing</string>
    <string name="gross_motor">Gross Motor</string>
    <string name="motor">Motor</string>
    <string name="fine_motor">Fine Motor</string>
    <string name="dominant">Dominant</string>
    <string name="non_dominant">Non-Dominant</string>
    <string name="hold">Hold</string>


    <string name="hearing_left">Hearing Left</string>
    <string name="hearing_right">Hearing Right</string>

    <string name="fine_motor_dominant">Fine Motor (Dominant)</string>
    <string name="fine_motor_non_dominant">Fine Motor (Non-dominant)</string>
    <string name="fine_motor_hold">Fine Motor (Hold)</string>

    <string name="view_hpi">CONSULTATION RECORDS</string>
    <string name="view_immunization">IMMUNIZATION RECORDS</string>
    <string name="refresh_dataset_list">REFRESH</string>

    <string name="immunization_records">IMMUNIZATION:</string>

    <string name="view_HPI_list">CONSULTATION LIST</string>
    <string name="case_impression">Case Impression</string>
    <string name="default_hpi">No HPI Text</string>
    <string name="btn_back">&lt;</string>

    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="na">N/A</string>
    <string name="close">X</string>

    <string name="no_immunizaiton">Patient has no immunization records!</string>


    <string-array name="vision_labels_array">
        <item>BMI</item>
        <item>Visual Acuity Left</item>
        <item>Visual Acuity Right</item>
        <item>Color Vision</item>
        <item>Hearing Left</item>
    </string-array>

    <string-array name="record_column_array">
        <item>BMI</item>
        <item>Visual Acuity Left</item>
        <item>Visual Acuity Right</item>
        <item>Color Vision</item>
        <item>Hearing Left</item>
        <item>Hearing Right</item>
        <item>Gross Motor</item>
        <item>Fine Motor (Dominant Hand)</item>
        <item>Fine Motor (Non-Dominant Hand)</item>
        <item>Fine Motor (Hold)</item>
    </string-array>

    <string-array name="record_column_array_num">
        <item>BMI</item>
        <item>Height (in cm)</item>
        <item>Weight (in kg)</item>
        <item>Visual Acuity Left</item>
        <item>Visual Acuity Right</item>
        <item>Color Vision</item>
        <item>Hearing Left</item>
        <item>Hearing Right</item>
        <item>Gross Motor</item>
        <item>Fine Motor (Dominant Hand)</item>
        <item>Fine Motor (Non-Dominant Hand)</item>
        <item>Fine Motor (Hold)</item>
    </string-array>
    <string-array name="record_column_array_num_tabs">
        <item>BMI</item>
        <item>Vision</item>
        <item>Hearing</item>
        <item>Gross Motor</item>
        <item>Fine Motor</item>
    </string-array>
    <string-array name="chart_type_array">
        <item>School Health Overview</item>
        <item>National Comparison</item>
        <item>Municipality Comparison</item>
    </string-array>

    <string-array name="right_chart_content_array">
        <item>National Profile</item>
        <item>Region</item>
        <item>Province</item>
        <item>Municipality</item>
    </string-array>

    <string-array name="age_filter_array">
        <item>&lt;</item>
        <item>=</item>
        <item>&gt;</item>
    </string-array>

    <string-array name="gender_filter_array">
        <item>N/A</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

</resources>