<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollViewAbout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:clipToPadding="false"
        android:scrollbarThumbVertical="@drawable/scrollbar_vertical_thumb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="7.3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightGrey"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/cont_about_item1_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cont_about_item1_image"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/cont_about_item1_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <ImageView
                        android:id="@+id/img_about_item1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="0.1"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/cd_blank"
                        android:cropToPadding="false"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/img_circle_trans" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.9"
                        android:text="@string/visual_acuity"
                        android:textColor="@color/colorPrimaryDark" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:layout_weight="1"
                    android:padding="0dp"
                    android:text="@string/left"
                    android:textColor="@color/colorPrimaryDark"
                    app:autoSizePresetSizes="@array/autosize_text_sizes" />

                <TextView
                    android:id="@+id/tv_visual_acuity_left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:layout_weight="1"
                    android:padding="0dp"
                    android:text="@string/left"
                    android:textColor="@color/colorPrimaryDark"
                    app:autoSizePresetSizes="@array/autosize_text_sizes" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:layout_weight="1"
                    android:padding="0dp"
                    android:text="@string/right"
                    android:textColor="@color/colorPrimaryDark"
                    app:autoSizePresetSizes="@array/autosize_text_sizes" />

                <TextView
                    android:id="@+id/tv_visual_acuity_right"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:layout_weight="1"
                    android:padding="0dp"
                    android:text="@string/right"
                    android:textColor="@color/colorPrimaryDark"
                    app:autoSizePresetSizes="@array/autosize_text_sizes" />

                <TextView
                    style="@style/SmallLabelText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:layout_weight="1"
                    android:padding="0dp"
                    android:text="@string/color_vision"
                    android:textColor="@color/colorPrimaryDark"
                    app:autoSizePresetSizes="@array/autosize_text_sizes" />

                <TextView
                    android:id="@+id/tv_color_vision"
                    style="@style/SmallContextText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:layout_weight="1"
                    android:padding="0dp"
                    android:text="@string/color_vision"
                    android:textColor="@color/colorPrimaryDark"
                    app:autoSizePresetSizes="@array/autosize_text_sizes" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/cont_about_item2_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cont_about_item2_image"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/cont_about_item2_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <ImageView
                        android:id="@+id/img_about_item2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/cd_blank"
                        android:cropToPadding="false"
                        android:scaleType="fitCenter" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.9"
                        android:padding="0dp"
                        android:text="@string/hearing" />
                </LinearLayout>

                <TextView
                    style="@style/SmallLabelText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="0dp"
                    android:text="@string/right"
                    android:textColor="@color/colorPrimaryDark"
                    app:autoSizePresetSizes="@array/autosize_text_sizes" />

                <TextView
                    android:id="@+id/tv_hearing_right"
                    style="@style/SmallContextText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="0dp"
                    android:text="@string/right"
                    android:textColor="@color/colorPrimaryDark"
                    app:autoSizePresetSizes="@array/autosize_text_sizes" />

                <TextView
                    android:id="@+id/tv_hearing_left"
                    style="@style/SmallContextText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="0dp"
                    android:text="@string/left"
                    android:textColor="@color/colorPrimaryDark"
                    app:autoSizePresetSizes="@array/autosize_text_sizes" />

                <TextView
                    style="@style/SmallLabelText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="0dp"
                    android:text="@string/left"
                    android:textColor="@color/colorPrimaryDark"
                    app:autoSizePresetSizes="@array/autosize_text_sizes" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cont_about_item3_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cont_about_item3_image"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/cont_about_item3_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <ImageView
                        android:id="@+id/img_about_item3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/cd_blank"
                        android:cropToPadding="false"
                        android:scaleType="fitCenter" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.9"
                        android:padding="0dp"
                        android:text="@string/motor"
                        android:textColor="@color/colorPrimaryDark" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="0dp"
                    android:text="@string/gross_motor"
                    android:textColor="@color/colorPrimaryDark"
                    app:autoSizePresetSizes="@array/autosize_text_sizes" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="0dp"
                    android:text="@string/non_dominant"
                    android:textColor="@color/colorPrimaryDark"
                    app:autoSizePresetSizes="@array/autosize_text_sizes" />

                <TextView
                    android:id="@+id/tv_fine_motor_d"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="0dp"
                    android:text="@string/dominant"
                    android:textColor="@color/colorPrimaryDark"
                    app:autoSizePresetSizes="@array/autosize_text_sizes" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:text="@string/fine_motor"
                    android:textColor="@color/colorPrimaryDark"
                    app:autoSizePresetSizes="@array/autosize_text_sizes" />

                <TextView
                    android:id="@+id/tv_fine_motor_nd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="0dp"
                    android:text="@string/non_dominant"
                    android:textColor="@color/colorPrimaryDark"
                    app:autoSizePresetSizes="@array/autosize_text_sizes" />

                <TextView
                    android:id="@+id/tv_fine_motor_hold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="0dp"
                    android:text="@string/hold"
                    android:textColor="@color/colorPrimaryDark"
                    app:autoSizePresetSizes="@array/autosize_text_sizes" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="0dp"
                    android:paddingStart="@dimen/context_padding"
                    android:paddingEnd="0dp"
                    android:text="@string/dominant"
                    android:textColor="@color/colorPrimaryDark"
                    app:autoSizePresetSizes="@array/autosize_text_sizes" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="0dp"
                    android:text="@string/hold"
                    android:textColor="@color/colorPrimaryDark"
                    app:autoSizePresetSizes="@array/autosize_text_sizes" />

                <TextView
                    android:id="@+id/tv_gross_motor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="0dp"
                    android:text="@string/gross_motor"
                    android:textColor="@color/colorPrimaryDark"
                    app:autoSizePresetSizes="@array/autosize_text_sizes" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cont_about_item4_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cont_about_item4_image"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/cont_about_item4_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <ImageView
                        android:id="@+id/img_about_item4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="0.1"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/cd_blank"
                        android:cropToPadding="false"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/img_circle_trans" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.9"
                        android:padding="0dp"
                        android:text="@string/remarks"
                        android:textColor="@color/colorPrimaryDark" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_record_remark"
                    style="@style/SmallContextText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:text="@string/remarks"
                    android:textColor="@color/colorPrimaryDark"
                    app:autoSizePresetSizes="@array/autosize_text_sizes" />

                <TextView
                    android:id="@+id/tv_patient_remark"
                    style="@style/SmallContextText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:text="@string/remarks"
                    android:textColor="@color/colorPrimaryDark"
                    app:autoSizePresetSizes="@array/autosize_text_sizes" />

                <TextView
                    style="@style/SmallLabelText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:text="@string/remarks"
                    android:textColor="@color/colorPrimaryDark"
                    app:autoSizePresetSizes="@array/autosize_text_sizes" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>